<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="navigation_drawer_items">
        <item>Weather</item>
        <item>Location</item>
        <item>Tasks</item>
        <item>Tagger</item>
        <item>Money</item>
    </string-array>

    <string-array name="pref_units">
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="pref_units_values">
        <item>f</item>
        <item>c</item>
        <item>k</item>
    </string-array>

    <!-- THEME -->
    <string name="app_name">Noah\'s Utilities</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="notification">New Notification</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>

    <!-- WEATHER FRAGMENT/PREFERENCES -->
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Fahrenheit</string>
    <string name="pref_units_label_kelvin">Kelvin</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">fahrenheit</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_defualt">94598</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--TAGGER-->
    <string name="none">None</string>

    <!--PREFERENCES-->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_weather">Weather</string>
    <string name="pref_unit">Select Unit</string>
    <string name="pref_zipcode">Zip Code</string>
    <string name="pref_useloc">Use Location</string>


</resources>
